# quick-menu-launcher

./: .gitignore  Cargo.toml  History.md  README.md  README_JA.md  README_KO.md  build.rs  err_icon.txt  err_icon_2.txt
refs/downloads/: QikMenu-251208b.7z  QikMenu-251215a.7z  QikMenu-251221a.7z  QikMenu-251223a.7z  QikMenu-260117a.7z
src/: QikMenu.ini  localization.rs  main.rs
