[package]
name = "quick-menu-launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "QikMenu"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19.0"
muda = "0.15.0"
tao = { version = "0.30.0", default-features = false, features = ["rwh_06"] }
open = "5.3.0"
single-instance = "0.3.3"
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
image = "0.24" # For icon loading
chrono = "0.4"

[build-dependencies]
image = "0.24"
winres = "0.1"
# [[bin]]
# name = "LaunchWinTrayMenu"
# path = "src/main.rs"
